# Pinball

./: CMakeLists.txt  Defs.cpp  Defs.h  Game.cpp  Game.h  Interface.cpp  Interface.h  README.md  loadInternalFrameLeft.txt  main.cpp
Assets/: Sprites.rar
Configurations/: AudioManager.txt  Balls.txt  Flippers.txt  Manager.txt  NonObstacles.txt  Obstacles.txt  PopBumpers.txt  SpeedBoasterLeft.txt  SpeedBoasterRight.txt  loadInternalFrameLeft (copy).txt  loadInternalFrameLeft.txt  loadInternalFrameRight.txt  loadInternalFramevertical.txt
GameObjects/: Ball.cpp  Ball.h  Collidable.h  Drawable.h  Flipper.cpp  Flipper.h  Manager.cpp  Manager.h
GameObjects/Obstacles/: Bullseye.cpp  Bullseye.h  Bumper.cpp  Bumper.h  Collectable.cpp  Collectable.h  ExternalFrame.cpp  ExternalFrame.h  Gate.cpp  Gate.h  InclinedWall.cpp  InclinedWall.h  InternalFrames.cpp  InternalFrames.h  Kicker.cpp  Kicker.h  Lane.cpp  Lane.h  Magnet.cpp  Magnet.h  Obstacle.h  PopBumper.cpp  PopBumper.h  Portal.cpp  Portal.h  Ramp.cpp  Ramp.h  ScoreMultiplier.cpp  ScoreMultiplier.h  SpeedBoaster.cpp  SpeedBoaster.h  SpeedBooster.cpp  SpeedBooster.h  SpriteWalls.cpp  SpriteWalls.h  Switch.cpp  Switch.h  ThrustBumper.cpp  ThrustBumper.h  ThurstBumper.cpp  (+7 more)
Materials/: Ball.mat  Bumper.mat  Flipper.mat  Star.mat  TitlePinball.mat  WallInside.mat  WallOutside.mat
Utility/: AudioManager.cpp  AudioManager.h  CollisionDetection.cpp  CollisionDetection.h  Configurable.cpp  Configurable.h  PixelPerfectCollision.cpp  PixelPerfectCollision.h  PostProcessing.cpp  PostProcessing.h  PreGame.cpp  PreGame.h
